Slack target webhook URL now configured from environment variable

--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -15,8 +15,8 @@
     <target xsi:type="Slack"
             name="slackTarget"
             layout="${message}"
-            webHookUrl="https://hooks.slack.com/services/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"
-            compact="false">
+            webHookUrl="(from environment variable)"
+            >
 
       <field name="Machine Name" layout="${machinename}" />
       <field name="Process Name" layout="${processname}" />
