--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -28,13 +28,13 @@
     "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
-    "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@pro.gov.uk>",
-    "DSDFromAddress": "Book a visit - The National Archives <noreply@pro.gov.uk>",
+    "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
+    "DSDFromAddress": "Book a visit - The National Archives <noreply@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
     "PostVisitSubject": "Your booking for {0} : How was your visit?",
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
-    "LoopSendDelay":  "10"
+    "LoopSendDelay": "10"
   }
 }
