--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,7 +23,7 @@ jobs:
         aws-access-key-id: ${{ secrets.KBS_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.KBS_AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-2
-        # role-to-assume: <UNKNOWN ATM>
+        role-to-assume: ecr-admin-role
         role-session-name: docker-build
 
     - name: Login to Amazon ECR
@@ -31,6 +31,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push the API to ECR
+      if: github.event.pull_request.merged == true
       id: build-push-API
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -44,6 +45,7 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Build, tag, and push the Web to ECR
+      if: github.event.pull_request.merged == true
       id: build-push-Web
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
