--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -10,6 +10,8 @@
   </extensions>
 
   <targets async="true">
+    <target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+
     <target xsi:type="Slack"
             name="slackTarget"
             layout="${message}"
@@ -22,6 +24,7 @@
     </target>
   </targets>
   <rules>
-    <logger name="*" minlevel="Error" writeTo="slackTarget" />
+    <logger name="*" minlevel="Debug" writeTo="slackTarget" />
+    <logger name="*" minlevel="Debug" writeTo="fileTarget" />
   </rules>
 </nlog>
