--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -10,7 +10,7 @@
   </extensions>
 
   <targets async="true">
-    <target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+    <!--<target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />-->
 
     <target xsi:type="Slack"
             name="slackTarget"
@@ -25,6 +25,6 @@
   </targets>
   <rules>
     <logger name="*" minlevel="Error" writeTo="slackTarget" />
-    <logger name="*" minlevel="Debug" writeTo="fileTarget" />
+    <!--<logger name="*" minlevel="Debug" writeTo="fileTarget" />-->
   </rules>
 </nlog>
