--- a/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
+++ b/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="NLog.Slack" Version="2.0.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
