--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -3,14 +3,18 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
-      throwExceptions="false">
+      throwExceptions="false"
+      internalLogLevel="Error"
+      internalLogFile="C:\Temp\NLog\nlog-app.log"
+      nternalLogToConsole="true"
+      >
 
   <extensions>
     <add assembly="NLog.Slack" />
   </extensions>
 
   <targets async="true">
-    <!--<target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />-->
+    <target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
 
     <target xsi:type="Slack"
             name="slackTarget"
@@ -22,9 +26,21 @@
       <field name="Process Name" layout="${processname}" />
       <field name="Process PID" layout="${processid}" />
     </target>
+    <target xsi:type="Database"
+            name="sqlServerTarget"
+            connectionString ="Data Source= (localdb)\MSSQLLocalDB;Initial Catalog=Logging;User Id=kbs_logger;Password=kbs_logger"
+            commandText ="EXEC proc_insert_kbs_nlog_entry @message, @level, @exception, @stackTrace, @logger, @url">
+      <parameter name="@message" layout="${event-context:item=error-message}" />
+      <parameter name="@level" layout="${level}" />
+      <parameter name="@exception" layout="${exception}" />
+      <parameter name="@stackTrace" layout="${event-context:item=stack-trace}" />
+      <parameter name="@logger" layout="${logger}" />
+      <parameter name="@url" layout="${aspnet-request-url}" />     
+    </target>
   </targets>
   <rules>
     <logger name="*" minlevel="Error" writeTo="slackTarget" />
-    <!--<logger name="*" minlevel="Debug" writeTo="fileTarget" />-->
+    <logger name="*" minlevel="Error" writeTo="fileTarget" />
+    <logger name="*" minlevel="Error" writeTo="sqlServerTarget" />
   </rules>
 </nlog>
