--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -11,7 +11,7 @@
   </extensions>
 
   <targets async="true">
-    <target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+    <!--<target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />-->
 
     <target xsi:type="Slack"
             name="slackTarget"
@@ -42,7 +42,7 @@
         <when condition="contains('${message}','Will retry')" action="Ignore" />
       </filters>
     </logger>
-    <logger name="*" minlevel="Error" writeTo="fileTarget" />
+    <!--<logger name="*" minlevel="Error" writeTo="fileTarget" />-->
     <logger name="*" minlevel="Error" writeTo="sqlServerTarget" />
   </rules>
 </nlog>
