--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       id: build-push-API
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.API_REPO_NAME }}
+        ECR_REPOSITORY: kbs-api
         IMAGE_TAG: ${{ github.event.inputs.kbs-api-version-tag }}
       run: |
         # Build the API docker container and push it to ECR 
