--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         IMAGE_TAG: ${{ github.event.inputs.kbs-api-version-tag }}
       run: |
         # Build the API docker container and push it to ECR 
-        docker build -t 500447081210.dkr.ecr.eu-west-2.amazonaws.com/kbs-api:$IMAGE_TAG -f Dockerfile-api .
+        docker build -t 500447081210.dkr.ecr.eu-west-2.amazonaws.com/kbs-api:latest -f Dockerfile-api .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
